-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: 10.0.25, 10.1.14
-
Component/s: Replication
-
Labels:
When stopped, either by STOP SLAVE, shutdown, or by error, the slave IO thread prints a message like
160615 10:27:51 [Note] Slave I/O thread exiting, read up to log 'binlog.026989', position 23827636; GTID position 0-197135068-997873951
|
The SQL thread also has code for this, but it is not in the error handling part of the thread, so it is only reached when the main thread loop terminates without error ... which doesn't even seem to happen on
{STOP SLAVE SQL_THREAD}The log message code should be moved down to the error handling part of the main SQL thread function, similar to how it is handled in the IO thread