MDEV-10271: Log stop of slave SQL thread on errors, too